--- a/src/index.css
+++ b/src/index.css
@@ -251,8 +251,13 @@ body {
 .services li {
   list-style-type: none;
   font-family: "Varela Round", sans-serif;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   font-weight: 500;
+  text-align: left;
+}
+
+.services h5 {
+  padding-bottom: 4%;
 }
 
 .services li p {
@@ -366,42 +371,14 @@ body {
   background-repeat: no-repeat;
 }
 
-#todoList {
-  background-image: url("./images/projects/todo.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-#gatsbyBlog {
-  background-image: url("./images/projects/gatsbyBlog.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-#diariesApp {
-  background-image: url("./images/projects/diaries.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-#memoriesApp {
-  background-image: url("./images/projects/memories.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-#devFolio {
-  background-image: url("./images/projects/devFolio.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-#uberEats {
-  background-image: url("./images/projects/uberEats.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
 #ChristianMusic {
   background-image: url("./images/projects/ChristianMusic.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#Medicure {
+  background-image: url("./images/projects/medicure.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -529,7 +506,7 @@ body {
   margin-top: 0.7rem;
   width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue";
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue";
   height: 33.33%;
   font-size: 1rem;
   align-items: center;
@@ -541,7 +518,7 @@ body {
   display: flex;
   font-size: 1rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue";
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue";
   width: 90%;
   height: 33.33%;
   align-items: center;
